tests/typing/fail/fixnum_not_have_foo.rb

def f(x)
  x.foo
end

f(2)
